# show-remind

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  auth.ts  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.mts  vitest.config.ts  vitest.web.config.ts  worker-configuration.d.ts  worker.ts  wrangler.jsonc
.claude/: launch.json
.github/workflows/: smoke.yml
app/: page.tsx
app/login/: page.tsx
app/playlists/: actions.ts  page.tsx
app/register/: page.tsx
app/settings/: actions.ts  page.tsx
app/shows/: page.tsx
app/verify/: route.ts
docs/: scraper-smoke.md  showstart-reverse-engineering.md
lib/: budget.test.ts  budget.ts  cities.test.ts  cities.ts  pipeline.test.ts  pipeline.ts  scraper-client.test.ts  scraper-client.ts  time.ts
lib/__tests__/: db.test.ts
lib/adapters/: parse-link.test.ts  parse-link.ts  qq.test.ts  qq.ts  tally.test.ts  tally.ts  types.ts
lib/auth/: passwords.test.ts  passwords.ts  (+2 more)
migrations/: 0001_init.sql  0002_meta.sql  0003_show_poster.sql  0004_artist_avatar.sql  0005_artist_netease_id.sql
prisma/: schema.prisma
scraper/: .dockerignore  Dockerfile  README.md  pyproject.toml
scraper/app/: main.py  models.py  qq.py  showstart.py
scraper/tests/: test_models.py  test_qq.py  test_showstart_detail.py  test_showstart_list.py
scraper/tests/fixtures/: qq_playlist_raw.json  showstart_detail_raw.json  showstart_list_raw.json
scripts/: seed.ts  smoke.ts
src/: env.ts  index.ts  turnstile.ts
test/: turnstile.test.ts
web/: index.html
(+129 files in other folders)
